--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,14 @@
 body{
   background-color: #fff;
 }
+header{
+  background-image: url(image/bg-img-01.jpg);
+  min-height: 90vh;
+  background-position: top center;
+  background-size: cover;
+  background-attachment: fixed;
+}
 section{
-  min-height: 80vh;
+  min-height: 50vh;
   border: 1px solid #000;
 }
